[gd_scene load_steps=6 format=2]

[ext_resource path="res://GUI/Inventory/InventoryWindow.tscn" type="PackedScene" id=1]
[ext_resource path="res://GUI/GUI.gd" type="Script" id=2]
[ext_resource path="res://GUI/DragPreview.tscn" type="PackedScene" id=3]
[ext_resource path="res://GUI/Inventory/QuickBar.tscn" type="PackedScene" id=4]
[ext_resource path="res://Shared/Theme/builder_theme.tres" type="Theme" id=5]

[node name="GUI" type="CenterContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 5 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 960.0
margin_top = 540.0
margin_right = 960.0
margin_bottom = 540.0
mouse_filter = 2

[node name="InventoryWindow" parent="HBoxContainer" instance=ExtResource( 1 )]
visible = false
margin_right = 90.0
margin_bottom = 110.0

[node name="DragPreview" parent="." instance=ExtResource( 3 )]

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 960.0
margin_top = 90.0
margin_right = 960.0
margin_bottom = 990.0
mouse_filter = 2
custom_constants/margin_top = 900

[node name="QuickBar" parent="MarginContainer" instance=ExtResource( 4 )]
margin_top = 900.0
margin_bottom = 900.0
